--- a/src/cryptly.html
+++ b/src/cryptly.html
@@ -21,9 +21,54 @@
             <div
                 class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
                 <div class="logo">
-                    <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
-                        <a href="index.html">OZENUA OLUWATOBI</a>
-                    </p>
+                    <a class="flex" href="index.html">
+                        <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            O
+                        </p>
+                        <p class="letter z text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            Z
+                        </p>
+                        <p class="letter e text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            E
+                        </p>
+                        <p class="letter n text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            N
+                        </p>
+                        <p class="letter u text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            U
+                        </p>
+                        <p class="letter a text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            A
+                        </p>
+
+                        <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm ml-1">
+                            O
+                        </p>
+                        <p class="letter l text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            L
+                        </p>
+                        <p class="letter u text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            U
+                        </p>
+                        <p class="letter w text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            W
+                        </p>
+                        <p class="letter a text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            A
+                        </p>
+                        <p class="letter t text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            T
+                        </p>
+                        <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            O
+                        </p>
+                        <p class="letter b text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            B
+                        </p>
+                        <p class="letter i text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            I
+                        </p>
+                    </a>
                 </div>
 
                 <div class="navlist hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
@@ -48,7 +93,8 @@
         </nav>
 
         <section class="header space-y-7 py-10 lg:py-16 xl:py-10">
-            <p class="header-text text-black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
+            <p
+                class="header-text text-black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
                 Cryptly: Creating true experience with Cryptocurrency.
             </p>
 
@@ -181,7 +227,8 @@
 
                 <div class="swot-analysis-image">
                     <a href="../assets/images/Cryptly Swot Analysis.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Swot Analysis.png" alt=""></a>
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Swot Analysis.png"
+                            alt=""></a>
                 </div>
             </div>
 
@@ -231,12 +278,14 @@
 
                 <div class="wireframes-image space-y-3 lg:space-y-5">
                     <div class="wireframe-image">
-                        <a href="../assets/images/Cryptly Wireframe 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Wireframe 1.png" alt=""></a>
+                        <a href="../assets/images/Cryptly Wireframe 1.png"><img
+                                class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
+                                src="../assets/images/Cryptly Wireframe 1.png" alt=""></a>
                     </div>
                     <div class="wireframe-image">
-                        <a href="../assets/images/Cryptly Wireframe 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Wireframe 2.png" alt=""></a>
+                        <a href="../assets/images/Cryptly Wireframe 2.png"><img
+                                class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
+                                src="../assets/images/Cryptly Wireframe 2.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -254,7 +303,8 @@
 
                 <div class="splash-screen-image">
                     <a href="../assets/images/Cryptly Splash Screen.png "><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Splash Screen.png  " alt=""></a>
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Splash Screen.png  "
+                            alt=""></a>
                 </div>
             </div>
 
@@ -279,7 +329,8 @@
                 </div>
             </div>
 
-            <div class="navigation-and-homepage mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid grid-cols-2 place-items-center md:gap-x-10 lg:gap-x-0">
+            <div
+                class="navigation-and-homepage mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid grid-cols-2 place-items-center md:gap-x-10 lg:gap-x-0">
                 <div class="texts space-y-5 sm:space-y-6 2xl:space-y-7 lg:pr-10">
                     <p
                         class="navigation-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
@@ -299,8 +350,9 @@
                 </div>
 
                 <div class="image flex justify-center items-start">
-                    <a href="../assets/images/Cryptly Navigation-Homepage.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Navigation-Homepage.png" alt=""></a>
+                    <a href="../assets/images/Cryptly Navigation-Homepage.png"><img
+                            class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
+                            src="../assets/images/Cryptly Navigation-Homepage.png" alt=""></a>
                 </div>
             </div>
 
@@ -331,18 +383,22 @@
                 </div>
             </div>
 
-            <div class="receiving-coins mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid place-items-center grid-cols-2 md:gap-x-10 lg:gap-x-0">
+            <div
+                class="receiving-coins mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid place-items-center grid-cols-2 md:gap-x-10 lg:gap-x-0">
                 <div class="receiving-coins-image">
-                    <a href="../assets/images/Cryptly Recieving Coins.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Recieving Coins.png" alt=""></a>
+                    <a href="../assets/images/Cryptly Recieving Coins.png"><img
+                            class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
+                            src="../assets/images/Cryptly Recieving Coins.png" alt=""></a>
                 </div>
 
                 <div class="texts space-y-5 sm:space-y-6 2xl:space-y-7 lg:pl-10">
-                    <p class="receiving-coins-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    <p
+                        class="receiving-coins-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                         Recieving coins
                     </p>
 
-                    <p class="receiving-coins -details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
+                    <p
+                        class="receiving-coins -details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
                         Now it’s something you really don’t have to worry about. You may never really need to come to
                         this
                         page anymore. Now you
@@ -358,7 +414,8 @@
                     Portfolio
                 </p>
 
-                <p class="receive-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
+                <p
+                    class="receive-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
                     Many other parts of the UI got redesigned as one of the goal is to give a full visual redesign of
                     the app.
                 </p>
@@ -374,9 +431,12 @@
                     Recovery
                 </p>
 
-                <p class="recovery-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
-                    Now it’s something you really don’t have to worry about. You may never really need to come to this page anymore. Now you
-                    can as well keep your phone at home and still share your address. All you need is your Cryptly username, also every
+                <p
+                    class="recovery-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
+                    Now it’s something you really don’t have to worry about. You may never really need to come to this
+                    page anymore. Now you
+                    can as well keep your phone at home and still share your address. All you need is your Cryptly
+                    username, also every
                     token or coin is also tied to the username.
                 </p>
 
