--- a/src/paysure.html
+++ b/src/paysure.html
@@ -21,9 +21,54 @@
             <div
                 class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
                 <div class="logo">
-                    <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
-                        <a href="index.html">OZENUA OLUWATOBI</a>
-                    </p>
+                    <a class="flex" href="index.html">
+                        <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            O
+                        </p>
+                        <p class="letter z text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            Z
+                        </p>
+                        <p class="letter e text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            E
+                        </p>
+                        <p class="letter n text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            N
+                        </p>
+                        <p class="letter u text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            U
+                        </p>
+                        <p class="letter a text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            A
+                        </p>
+
+                        <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm ml-1">
+                            O
+                        </p>
+                        <p class="letter l text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            L
+                        </p>
+                        <p class="letter u text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            U
+                        </p>
+                        <p class="letter w text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            W
+                        </p>
+                        <p class="letter a text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            A
+                        </p>
+                        <p class="letter t text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            T
+                        </p>
+                        <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            O
+                        </p>
+                        <p class="letter b text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            B
+                        </p>
+                        <p class="letter i text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            I
+                        </p>
+                    </a>
                 </div>
 
                 <div class="navlist hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
@@ -144,13 +189,13 @@
                 <div class="wireframes-image space-y-3 lg:space-y-3">
                     <div class="wireframes-image">
                         <a href="../assets/images/Paysure Wireframe 1.png"><img
-                                class="rounded-2xl lg:rounded-3xl w-full"
-                                src="../assets/images/Paysure Wireframe 1.png" alt=""></a>
+                                class="rounded-2xl lg:rounded-3xl w-full" src="../assets/images/Paysure Wireframe 1.png"
+                                alt=""></a>
                     </div>
                     <div class="wireframes-image">
                         <a href="../assets/images/Paysure Wireframe 2.png"><img
-                                class="rounded-2xl lg:rounded-3xl w-full"
-                                src="../assets/images/Paysure Wireframe 2.png" alt=""></a>
+                                class="rounded-2xl lg:rounded-3xl w-full" src="../assets/images/Paysure Wireframe 2.png"
+                                alt=""></a>
                     </div>
                 </div>
             </div>
@@ -181,11 +226,13 @@
             </div>
 
             <div class="visual-design mt-24 md:mt-32 xl:mt-40 lg:my-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Visual
                     Design</p>
 
-                <p class="visual-design-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
+                <p
+                    class="visual-design-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     After several rounds of iterations on the wireframe, we designed the high-fidelity screens.
                 </p>
 
@@ -206,8 +253,8 @@
 
                     <div class="paysure-visual-design-container">
                         <a href="../assets/images/Paysure Visual Design 3.png">
-                            <img class="rounded-2xl lg:rounded-3xl"
-                                src="../assets/images/Paysure Visual Design 3.png" alt="">
+                            <img class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure Visual Design 3.png"
+                                alt="">
                         </a>
                     </div>
 
@@ -221,11 +268,13 @@
             </div>
 
             <div class="conclusion mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Conclusion
                 </p>
 
-                <p class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
+                <p
+                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
                     The UI design was framed based on data collected over a long period of time and multiple test
                     sessions. The design was
                     made to be minimal, well organized flows, and feature centered to meet the users needs. As a result,
