--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -24,9 +24,54 @@
             <div
                 class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
                 <div class="logo">
-                    <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
-                        <a href="index.html">OZENUA OLUWATOBI</a>
-                    </p>
+                    <a class="flex" href="index.html">
+                        <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            O
+                        </p>
+                        <p class="letter z text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            Z
+                        </p>
+                        <p class="letter e text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            E
+                        </p>
+                        <p class="letter n text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            N
+                        </p>
+                        <p class="letter u text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            U
+                        </p>
+                        <p class="letter a text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            A
+                        </p>
+
+                        <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm ml-1">
+                            O
+                        </p>
+                        <p class="letter l text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            L
+                        </p>
+                        <p class="letter u text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            U
+                        </p>
+                        <p class="letter w text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            W
+                        </p>
+                        <p class="letter a text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            A
+                        </p>
+                        <p class="letter t text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            T
+                        </p>
+                        <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            O
+                        </p>
+                        <p class="letter b text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            B
+                        </p>
+                        <p class="letter i text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+                            I
+                        </p>
+                    </a>
                 </div>
 
                 <div class="navlist hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
@@ -69,7 +114,8 @@
 
         <section class="jumiar mt-10">
             <div class="mobile-commerce-study space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="mobile-commerce-study-text font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:pb-10 text-primary">
+                <p
+                    class="mobile-commerce-study-text font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:pb-10 text-primary">
                     Mobile commerce will outpace non-mobile commerce in 2021. In 2021, mobile commerce sales will
                     account for
                     more than half of total e-commerce sales. Today, one-third of purchasing decisions are influenced by
@@ -96,7 +142,8 @@
                     Why Jumia
                 </p>
 
-                <p class="why-jumia-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
+                <p
+                    class="why-jumia-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     Jumia is the leading pan-African e-commerce platform active across 11 countries on the continent.
                     The
                     platform consists
@@ -188,8 +235,8 @@
                 </p>
 
                 <div class="userflow-image w-full lg:mb-32">
-                    <a href="../assets/images/gt user flow.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/gt user flow.png" alt=""></a>
+                    <a href="../assets/images/Jumiar Userflow.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Userflow.png" alt=""></a>
                 </div>
             </div>
 
@@ -208,8 +255,8 @@
                 </p>
 
                 <div class="wireframes-image w-full lg:mb-32">
-                    <a href="../assets/images/gt wireframes.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/gt wireframes.png" alt=""></a>
+                    <a href="../assets/images/Juimar Wireframes.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Juimar Wireframes.png" alt=""></a>
                 </div>
             </div>
 
@@ -226,8 +273,8 @@
                 </p>
 
                 <div class="design-style-guide-image w-full lg:mt-10 lg:mb-32">
-                    <a href="../assets/images/gt design style.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/gt design style.png" alt=""></a>
+                    <a href="../assets/images/Jumiar Style Guide.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Style Guide.png" alt=""></a>
                 </div>
             </div>
 
@@ -245,11 +292,18 @@
                     scanner.
                 </p>
 
-                <div class="visual-design-images w-full space-y-3 lg:space-y-5">
-                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
-                        src="../assets/images/gt visual design 1.png" alt="">
-                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
-                        src="../assets/images/gt visual design 2.png" alt="">
+                <div class="visual-design-images w-full space-y-3 lg:space-y-3">
+                    <div class="visual-design-image">
+                        <a href="../assets/images/Jumiar Visual Design 1.png">
+                            <img src="../assets/images/Jumiar Visual Design 1.png" alt="">
+                        </a>
+                    </div>
+
+                    <div class="visual-design-image">
+                        <a href="../assets/images/Jumiar Visual Design 2.png">
+                            <img src="../assets/images/Jumiar Visual Design 2.png" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -280,9 +334,8 @@
                 </div>
 
                 <div class="further-visual-design-image">
-                    <a href="../assets/images/gt visual design single.png"><img
-                            class="rounded-2xl lg:rounded-3xl w-full" src="../assets/images/gt visual design single.png"
-                            alt=""></a>
+                    <a href="../assets/images/Jumiar Visual Design 3.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Jumiar Visual Design 3.png" alt=""></a>
                 </div>
             </div>
 
@@ -305,10 +358,10 @@
                 </p>
 
                 <div class="grid grid-cols-2 gap-x-2 md:gap-x-5 lg:gap-x-5 lg:mt-14">
-                    <a href="../assets/images/search screen 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/search screen 1.png" alt=""></a>
-                    <a href="../assets/images/search screen 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/search screen 2.png" alt=""></a>
+                    <a href="../assets/images/Jumiar Search 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Search 1.png" alt=""></a>
+                    <a href="../assets/images/Jumiar Search 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Search 2.png" alt=""></a>
                 </div>
             </div>
 
@@ -335,8 +388,9 @@
 
                 <div class="space-y-10 md:space-y-0 md:grid grid-cols-2 place-items-start md:gap-x-5 lg:mt-10">
                     <div class="info-1 space-y-5 sm:space-y-6 2xl:space-y-7">
-                        <a href="../assets/images/test ar 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/test ar 1.png" alt=""></a>
+                        <a href="../assets/images/Jumiar Test AR 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Test AR 1.png"
+                                alt=""></a>
 
                         <p
                             class="info-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-8">
@@ -348,8 +402,9 @@
                     </div>
 
                     <div class="info-2 space-y-5 sm:space-y-6 2xl:space-y-7">
-                        <a href="../assets/images/test ar 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/test ar 2.png" alt=""></a>
+                        <a href="../assets/images/Jumiar Test AR 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Test AR 2.png"
+                                alt=""></a>
 
                         <p
                             class="info-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-8">
