--- a/src/gtworld.html
+++ b/src/gtworld.html
@@ -360,8 +360,8 @@
                 </p>
 
                 <div class="sketches-image">
-                    <a href="../assets/images/sketch.jpg"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/sketch.jpg" alt=""></a>
+                    <a href="../assets/images/Gt sketch.jpg"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt sketch.jpg" alt=""></a>
                 </div>
             </div>
 
@@ -448,13 +448,11 @@
 
             <div class="navigation-and-homepage mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid grid-cols-2 md:gap-x-10 md:place-items-start lg:gap-x-0">
                 <div class="texts space-y-5 sm:space-y-6 2xl:space-y-7 lg:pr-10">
-                    <p
-                        class="navigation-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    <p class="navigation-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                         Navigation and Home page
                     </p>
 
-                    <p
-                        class="navigation-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
+                    <p class="navigation-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
                         The existing homepage design on the app was full of clusters of unused items and confusing app
                         navigation. This was
                         highlighted to be one of the app's pain points as users were unable to locate key features
@@ -469,7 +467,7 @@
 
                 <div class="image grid place-items-start">
                     <a class="lg:-mt-4" href="../assets/images/Gt Navigation-Home.png"><img
-                            class="rounded-2xl lg:rounded-3xl w-full" src="../assets/images/navigation.png" alt=""></a>
+                            class="rounded-2xl lg:rounded-3xl w-full" src="../assets/images/Gt Navigation-Home.png" alt=""></a>
                 </div>
             </div>
 
