--- a/src/index.html
+++ b/src/index.html
@@ -562,7 +562,8 @@
             </p>
 
             <div
-              class="header-text-container h-9 md:h-12 lg:h-20 xl:h-24 2xl:h-28 mt-2 md:mb-3 lg:pb-5 overflow-hidden inline-block">
+              class="header-text-container h-9 md:h-12 lg:h-20 xl:h-24 2xl:h-28 mt-2 md:mb-3 lg:pb-5 overflow-hidden inline-block"
+               data-image-src="century-image">
               <div
                 class="div space-y-1 md:space-y-2 xl:space-y-3 2xl:space-y-2 transform transition duration-500 hover:-translate-y-9 sm:hover:-translate-y-14 md:hover:-translate-y-14 lg:hover:-translate-y-20 xl:hover:-translate-y-28">
                 <h1
@@ -590,7 +591,8 @@
             </p>
 
             <div
-              class="header-text-container h-9 md:h-12 lg:h-20 xl:h-24 2xl:h-28 mt-2 md:mb-3 lg:pb-5 overflow-hidden inline-block">
+              class="header-text-container h-9 md:h-12 lg:h-20 xl:h-24 2xl:h-28 mt-2 md:mb-3 lg:pb-5 overflow-hidden inline-block"
+               data-image-src="leap-image">
               <div
                 class="div space-y-1 md:space-y-2 xl:space-y-3 2xl:space-y-2 transform transition duration-500 hover:-translate-y-9 sm:hover:-translate-y-14 md:hover:-translate-y-14 lg:hover:-translate-y-20 xl:hover:-translate-y-28">
                 <h1
@@ -922,6 +924,17 @@
 
 
   <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
+    <div class="cursor-media s">
+      <!-- <video class="c-video"
+        src="https://res.cloudinary.com/eazzie/video/upload/q_40/v1629643459/centuryvideo_eah7ty.mp4" preload="auto"
+        autoplay muted loop id="century-video"></video>
+
+      <video class="l-video" src="https://res.cloudinary.com/eazzie/video/upload/q_40/v1629500836/leapvideo_qz9ojv.mp4"
+        preload="auto" autoplay muted loop id="leap-video"></video> -->
+
+        <img src="../assets/images/Paysure Texts.png" alt="" id="century-image">
+        <img src="../assets/images/Gt Onboarding.png" alt="" id="leap-image">
+    </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
