--- a/src/paysure.html
+++ b/src/paysure.html
@@ -94,7 +94,7 @@
 
         <section class="header space-y-7 py-10 lg:py-16 xl:py-10">
             <p
-                class="header-text -black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
+                class="header-text -black dark:text-white inv font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
                 Pay sure
             </p>
 
@@ -111,7 +111,8 @@
 
         <section class="paysure mt-10">
             <div class="overview space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="overview-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="overview-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Overview
                 </p>
 
@@ -125,7 +126,7 @@
 
             <div class="the-problem mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="the-problem-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="the-problem-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     The problem
                 </p>
 
@@ -140,7 +141,8 @@
             </div>
 
             <div class="goals mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="goal-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">Goals
+                <p class="goal-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    Goals
                 </p>
 
                 <ol
@@ -152,7 +154,7 @@
 
             <div class="design-process mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="design-process-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="design-process-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Design
                     process</p>
 
@@ -164,7 +166,8 @@
             </div>
 
             <div class="userflow mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="userflow-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     User flow</p>
 
                 <div class="userflow-images">
@@ -175,7 +178,7 @@
 
             <div class="wireframes mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="wireframes-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Wireframes
                 </p>
 
@@ -202,7 +205,7 @@
 
             <div class="colors-and-typography mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="colors-and-typography-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="colors-and-typography-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Colors and
                     Typography</p>
 
@@ -227,7 +230,7 @@
 
             <div class="visual-design mt-24 md:mt-32 xl:mt-40 lg:my-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="visual-design-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Visual
                     Design</p>
 
@@ -269,7 +272,7 @@
 
             <div class="conclusion mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="conclusion-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Conclusion
                 </p>
 
@@ -285,6 +288,21 @@
                 </p>
             </div>
         </section>
+
+        <div class="navigators flex justify-center mt-10 lg:mt-48">
+            <div class="navigators-container w-1/3 flex justify-start items-center">
+                <div class="navigator-right flex justify-center items-center">
+                    <i class="fas fa-chevron-left mr-5 text-black dark:text-white"></i>
+
+                    <a href="cryptly.html">
+                        <h1
+                            class="font-sf z-50 text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest text-primary">
+                            Cryptly
+                        </h1>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
@@ -294,7 +312,7 @@
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <p
-                        class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
+                        class="got-an-idea inv font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
                         Got an idea?
                     </p>
 
@@ -324,7 +342,7 @@
 
     <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
 
-
+        <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
         <script type="module" src="js/index.js"></script>
