--- a/src/cryptly.html
+++ b/src/cryptly.html
@@ -94,7 +94,7 @@
 
         <section class="header space-y-7 py-10 lg:py-16 xl:py-10">
             <p
-                class="header-text text-black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
+                class="header-text text-black dark:text-white inv font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
                 Cryptly: Creating true experience with Cryptocurrency.
             </p>
 
@@ -117,7 +117,8 @@
             </div>
 
             <div class="overview mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="overview-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="overview-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Overview
                 </p>
 
@@ -140,7 +141,7 @@
 
             <div class="the-problem mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="the-problem-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="the-problem-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     The problem
                 </p>
 
@@ -157,7 +158,7 @@
                     to understand by new cryptocurrency users.
                 </p>
 
-                <p class="pain-points-header-text font-caudex text-black dark:text-white text-lg lg:text-2xl">
+                <p class="pain-points-header-text inv font-caudex text-black dark:text-white text-lg lg:text-2xl">
                     Pain points for users on other platforms
                 </p>
 
@@ -172,7 +173,8 @@
             </div>
 
             <div class="goals mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="goal-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">Goals
+                <p class="goal-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    Goals
                 </p>
 
                 <ol
@@ -186,7 +188,8 @@
             </div>
 
             <div class="solution mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="solution-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="solution-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     The Solution
                 </p>
 
@@ -201,7 +204,7 @@
 
             <div class="design-process mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="design-process-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="design-process-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Design process
                 </p>
 
@@ -214,7 +217,7 @@
 
             <div class="swot-analysis mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="swot-analysis-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="swot-analysis-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     SWOT analysis
                 </p>
 
@@ -233,7 +236,8 @@
             </div>
 
             <div class="userflow mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="userflow-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     User flow</p>
 
                 <div class="userflow-images">
@@ -244,7 +248,7 @@
 
             <div class="who-are-the-users mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="who-are-the-users-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="who-are-the-users-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Who are the users
                 </p>
 
@@ -265,7 +269,7 @@
 
             <div class="wireframes mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="wireframes-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Wireframes
                 </p>
 
@@ -292,7 +296,7 @@
 
             <div class="splash-screen mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="splash-screen-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="splash-screen-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Splashscreen</p>
 
                 <p
@@ -310,7 +314,7 @@
 
             <div class="onboarding mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="onboarding-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="onboarding-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Onboarding
                 </p>
 
@@ -333,7 +337,7 @@
                 class="navigation-and-homepage mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid grid-cols-2 place-items-center md:gap-x-10 lg:gap-x-0">
                 <div class="texts space-y-5 sm:space-y-6 2xl:space-y-7 lg:pr-10">
                     <p
-                        class="navigation-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                        class="navigation-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                         Navigation and Home page
                     </p>
 
@@ -359,7 +363,7 @@
             <div class="send-coins mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <div class="texts space-y-5 sm:space-y-6 2xl:space-y-7 lg:pr-10">
                     <p
-                        class="send-coins-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                        class="send-coins-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                         Send coins
                     </p>
 
@@ -393,7 +397,7 @@
 
                 <div class="texts space-y-5 sm:space-y-6 2xl:space-y-7 lg:pl-10">
                     <p
-                        class="receiving-coins-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                        class="receiving-coins-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                         Recieving coins
                     </p>
 
@@ -427,7 +431,8 @@
             </div>
 
             <div class="recovery mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="recovery-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="recovery-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Recovery
                 </p>
 
@@ -446,6 +451,31 @@
                 </div>
             </div>
         </section>
+
+        <div class="navigators flex justify-center mt-10 lg:mt-48">
+            <div class="navigators-container w-1/3 flex justify-between items-center">
+                <div class="navigator-right flex justify-center items-center">
+                    <i class="fas fa-chevron-left mr-5 text-black dark:text-white"></i>
+
+                    <a href="gtworld.html">
+                        <h1
+                            class="font-sf z-50 text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest text-primary">
+                            GTWorld
+                        </h1>
+                    </a>
+                </div>
+
+                <div class="navigator-right flex justify-center items-center">
+                    <a href="paysure.html">
+                        <h1 class="font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest text-primary">
+                            Paysure
+                        </h1>
+                    </a>
+
+                    <i class="fas fa-chevron-right ml-5 text-black dark:text-white"></i>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
@@ -455,7 +485,7 @@
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <p
-                        class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
+                        class="got-an-idea inv font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
                         Got an idea?
                     </p>
 
@@ -485,6 +515,7 @@
 
     <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
 
+    <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
