--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -97,7 +97,7 @@
 
         <section class="header space-y-7 py-10 lg:py-16 xl:py-10">
             <p
-                class="header-text text-black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
+                class="header-text text-black dark:text-white inv font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
                 JUMIAR : An AR Experience in Mobile Commerce.
             </p>
 
@@ -138,12 +138,12 @@
             </div>
 
             <div class="why-jumia mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="why-jumia-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="why-jumia-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Why Jumia
                 </p>
 
-                <p
-                    class="why-jumia-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
+                <p class="why-jumia-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     Jumia is the leading pan-African e-commerce platform active across 11 countries on the continent.
                     The
                     platform consists
@@ -171,7 +171,7 @@
                 </div>
 
                 <p
-                    class="extended-why-jumia-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl pt-10 sm:pt-16">
+                    class="extended-why-jumia-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl pt-10 sm:pt-16">
                     Why Jumia
                 </p>
 
@@ -187,7 +187,8 @@
             </div>
 
             <div class="ideation mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="ideation-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl ">
+                <p
+                    class="ideation-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl ">
                     Ideation</p>
 
                 <p
@@ -203,7 +204,8 @@
             </div>
 
             <div class="solution mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="solution-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl ">
+                <p
+                    class="solution-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl ">
                     The Solution
                 </p>
 
@@ -226,7 +228,8 @@
             </div>
 
             <div class="userflow mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p
+                    class="userflow-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     User flow</p>
 
                 <p
@@ -242,7 +245,7 @@
 
             <div class="wireframes mt-24 md:mt-32 xl:mt-40  space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="wireframes-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Wireframes
                 </p>
 
@@ -262,7 +265,7 @@
 
             <div class="design-style-guide mt-24 md:mt-32 xl:mt-40  space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="design-style-guide-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="design-style-guide-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Design style guide
                 </p>
 
@@ -280,7 +283,7 @@
 
             <div class="visual-design mt-24 md:mt-32 xl:mt-40 lg:my-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="visual-design-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Visual Design
                 </p>
 
@@ -311,7 +314,7 @@
                 class="further-visual-design space-y-5 sm:space-y-6 2xl:space-y-7 md:grid grid-cols-2 md:gap-x-10 place-items-center lg:gap-x-0 mt-24 md:mt-32 xl:mt-40">
                 <div class="texts lg:pr-10 space-y-5 sm:space-y-6 2xl:space-y-7 lg:space-y-5">
                     <p
-                        class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                        class="visual-design-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                         Visual Design
                     </p>
 
@@ -341,7 +344,7 @@
 
             <div class="the-screen-search mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="the-screen-search-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="the-screen-search-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     The search screen: A new way to search
                 </p>
 
@@ -366,7 +369,7 @@
             </div>
 
             <div class="test-ar mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="test-ar font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">Test AR:
+                <p class="test-ar inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">Test AR:
                     Real-time Product
                     Testing</p>
 
@@ -426,7 +429,7 @@
 
             <div class="conclusion mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
-                    class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    class="conclusion-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Conclusion
                 </p>
 
@@ -462,6 +465,20 @@
                 </p>
             </div>
         </section>
+
+        <div class="navigators flex justify-center mt-10 lg:mt-48">
+            <div class="navigators-container w-1/3 flex justify-end items-center">    
+                <div class="navigator-right flex justify-center items-center">
+                    <a href="gtworld.html">
+                        <h1 class="font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest text-primary">
+                            GTWorld
+                        </h1>
+                    </a>
+    
+                    <i class="fas fa-chevron-right ml-5 text-black dark:text-white"></i>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
@@ -471,7 +488,7 @@
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <p
-                        class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
+                        class="got-an-idea inv font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
                         Got an idea?
                     </p>
 
@@ -500,15 +517,15 @@
     </footer>
 
 
-    <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
+    <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white"></div>
 
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"
-            integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-        <script type="module" src="js/index.js"></script>
+    <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"
+        integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script type="module" src="js/index.js"></script>
 
 </body>
 
