--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="sass/texts.scss">
     <link rel="stylesheet" href="sass/cursor.scss">
     <link rel="stylesheet" href="sass/style.scss">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css"
-        integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
@@ -143,7 +142,8 @@
                     Why Jumia
                 </p>
 
-                <p class="why-jumia-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
+                <p
+                    class="why-jumia-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     Jumia is the leading pan-African e-commerce platform active across 11 countries on the continent.
                     The
                     platform consists
@@ -467,14 +467,14 @@
         </section>
 
         <div class="navigators flex justify-center mt-10 lg:mt-48">
-            <div class="navigators-container w-1/3 flex justify-end items-center">    
+            <div class="navigators-container w-1/3 flex justify-end items-center">
                 <div class="navigator-right flex justify-center items-center">
                     <a href="gtworld.html">
                         <h1 class="font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest text-primary">
                             GTWorld
                         </h1>
                     </a>
-    
+
                     <i class="fas fa-chevron-right ml-5 text-black dark:text-white"></i>
                 </div>
             </div>
