--- a/src/cryptly.html
+++ b/src/cryptly.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="sass/texts.scss">
     <link rel="stylesheet" href="sass/cursor.scss">
     <link rel="stylesheet" href="sass/style.scss">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
@@ -515,7 +517,7 @@
 
     <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
 
-    <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
