--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -426,8 +426,7 @@
                 </div>
             </div>
 
-            <div
-                class="further-visual-design space-y-5 sm:space-y-6 2xl:space-y-7 md:grid grid-cols-2 md:gap-x-10 place-items-center lg:gap-x-0 mt-24 md:mt-32 xl:mt-40">
+            <div class="further-visual-design space-y-5 sm:space-y-6 2xl:space-y-7 md:grid grid-cols-2 md:gap-x-10 place-items-center lg:gap-x-0 mt-24 md:mt-32 xl:mt-40">
                 <div class="texts lg:pr-10 space-y-5 sm:space-y-6 2xl:space-y-7 lg:space-y-5">
                     <h3 data-aos="fade-right" data-aos-duration="800"
                         class="visual-design-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
